--- a/src/_includes/sections/about/index.njk
+++ b/src/_includes/sections/about/index.njk
@@ -82,7 +82,7 @@
                   1112.324 0 6.162 6.162 0 01-12.324 0zM12 16a4 4 0 110-8 4 4 0 010 8zm4.965-10.405a1.44 1.44 0 112.881.001 1.44 1.44 0
                   01-2.881-.001z"/>
                 </svg>
-                <span class="text-sm lg:text-base font-medium">{{ currentSection.copy.social.instagram.handle }}</span>
+                <span class="text-sm lg:text-base font-medium font-century">{{ currentSection.copy.social.instagram.handle }}</span>
               </a>
             {% endif %}
           </div>
